fix:(PI-004): refatora entities, DTOs, services e controllers para alinhar ao schema PostgreSQL 15