@@ -6,50 +6,49 @@ import br.com.fieldops.api.domain.repository.EquipamentoRepository;
 import br.com.fieldops.api.domain.repository.LocalRepository;
 import br.com.fieldops.api.presentation.dto.EquipamentoRequestDTO;
 import br.com.fieldops.api.presentation.dto.EquipamentoResponseDTO;
-import jakarta.persistence.EntityNotFoundException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class EquipamentoService {
 
-    @Autowired
-    private EquipamentoRepository equipamentoRepository;
+    private final EquipamentoRepository equipamentoRepository;
+    private final LocalRepository localRepository;
 
-    @Autowired
-    private LocalRepository localRepository;
+    public EquipamentoService(EquipamentoRepository equipamentoRepository, LocalRepository localRepository) {
+        this.equipamentoRepository = equipamentoRepository;
+        this.localRepository = localRepository;
+    }
 
     @Transactional
     public EquipamentoResponseDTO criar(EquipamentoRequestDTO dto) {
-        if (equipamentoRepository.existsByNumeroSerie(dto.getNumeroSerie())) {
-            throw new IllegalArgumentException("Já existe um equipamento cadastrado com o número de série: " + dto.getNumeroSerie());
-        }
-
         Local local = localRepository.findById(dto.getLocalId())
-                .orElseThrow(() -> new EntityNotFoundException("Local não encontrado com ID: " + dto.getLocalId()));
+                .orElseThrow(() -> new RuntimeException("Local não encontrado"));
 
         Equipamento equipamento = new Equipamento();
-        equipamento.setNome(dto.getNome());
+        equipamento.setCodigoQr(dto.getCodigoQr());
         equipamento.setNumeroSerie(dto.getNumeroSerie());
-        equipamento.setTipo(dto.getTipo());
+        equipamento.setCategoria(dto.getCategoria());
+        equipamento.setStatus(dto.getStatus());
         equipamento.setLocal(local);
-        equipamento.setAtivo(true);
 
-        return new EquipamentoResponseDTO(equipamentoRepository.save(equipamento));
+        Equipamento salvo = equipamentoRepository.save(equipamento);
+        return new EquipamentoResponseDTO(salvo);
     }
 
     public List<EquipamentoResponseDTO> listarTodos() {
-        return equipamentoRepository.findByAtivoTrue().stream()
+        return equipamentoRepository.findAll().stream()
                 .map(EquipamentoResponseDTO::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<EquipamentoResponseDTO> listarPorLocal(Long localId) {
-        return equipamentoRepository.findByLocalIdAndAtivoTrue(localId).stream()
+        return equipamentoRepository.findAll().stream()
+                .filter(e -> e.getLocal() != null && e.getLocal().getId().equals(localId))
                 .map(EquipamentoResponseDTO::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
