@@ -2,8 +2,6 @@ package br.com.fieldops.api.domain.service;
 
 import br.com.fieldops.api.domain.entity.Equipamento;
 import br.com.fieldops.api.domain.entity.Inspecao;
-import br.com.fieldops.api.domain.entity.Perfil;
-import br.com.fieldops.api.domain.entity.StatusInspecao;
 import br.com.fieldops.api.domain.entity.Usuario;
 import br.com.fieldops.api.domain.repository.EquipamentoRepository;
 import br.com.fieldops.api.domain.repository.InspecaoRepository;
@@ -11,77 +9,79 @@ import br.com.fieldops.api.domain.repository.UsuarioRepository;
 import br.com.fieldops.api.presentation.dto.InspecaoRequestDTO;
 import br.com.fieldops.api.presentation.dto.InspecaoResponseDTO;
 import br.com.fieldops.api.presentation.dto.InspecaoStatusDTO;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class InspecaoService {
 
-    @Autowired
-    private InspecaoRepository inspecaoRepository;
+    private final InspecaoRepository inspecaoRepository;
+    private final EquipamentoRepository equipamentoRepository;
+    private final UsuarioRepository usuarioRepository;
 
-    @Autowired
-    private EquipamentoRepository equipamentoRepository;
-
-    @Autowired
-    private UsuarioRepository usuarioRepository;
+    public InspecaoService(InspecaoRepository inspecaoRepository,
+                          EquipamentoRepository equipamentoRepository,
+                          UsuarioRepository usuarioRepository) {
+        this.inspecaoRepository = inspecaoRepository;
+        this.equipamentoRepository = equipamentoRepository;
+        this.usuarioRepository = usuarioRepository;
+    }
 
     @Transactional
     public InspecaoResponseDTO criar(InspecaoRequestDTO dto) {
         Equipamento equipamento = equipamentoRepository.findById(dto.getEquipamentoId())
-                .orElseThrow(() -> new IllegalArgumentException("Equipamento não encontrado com o ID: " + dto.getEquipamentoId()));
-
-        Usuario usuario = usuarioRepository.findById(dto.getUsuarioId())
-                .orElseThrow(() -> new IllegalArgumentException("Usuário não encontrado com o ID: " + dto.getUsuarioId()));
-
-        // TRAVA DE SEGURANÇA: Garante que apenas usuários com perfil TECNICO recebam a inspeção
-        if (!Perfil.TECNICO.equals(usuario.getPerfil())) {
-            throw new IllegalArgumentException("A inspeção só pode ser atribuída a um usuário com perfil TÉCNICO.");
-        }
+                .orElseThrow(() -> new RuntimeException("Equipamento não encontrado"));
+        
+        Usuario tecnico = usuarioRepository.findById(dto.getUsuarioId())
+                .orElseThrow(() -> new RuntimeException("Técnico não encontrado"));
 
         Inspecao inspecao = new Inspecao();
-        inspecao.setDescricao(dto.getDescricao());
-        inspecao.setDataAgendada(dto.getDataAgendada());
-        inspecao.setObservacoes(dto.getObservacoes());
         inspecao.setEquipamento(equipamento);
-        inspecao.setUsuario(usuario);
-        inspecao.setStatus(StatusInspecao.PENDENTE);
+        inspecao.setTecnico(tecnico);
+        inspecao.setStatus("PENDENTE");
+        inspecao.setDataAgendamento(dto.getDataAgendada());
+        inspecao.setObservacoesRevisao(dto.getObservacoes());
 
-        return new InspecaoResponseDTO(inspecaoRepository.save(inspecao));
+        Inspecao salva = inspecaoRepository.save(inspecao);
+        return new InspecaoResponseDTO(salva);
     }
 
     public List<InspecaoResponseDTO> listarTodas() {
         return inspecaoRepository.findAll().stream()
                 .map(InspecaoResponseDTO::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<InspecaoResponseDTO> listarPorUsuario(Long usuarioId) {
-        return inspecaoRepository.findByUsuarioId(usuarioId).stream()
+        return inspecaoRepository.findAll().stream()
+                .filter(i -> (i.getTecnico() != null && i.getTecnico().getId().equals(usuarioId)) ||
+                             (i.getSupervisor() != null && i.getSupervisor().getId().equals(usuarioId)))
                 .map(InspecaoResponseDTO::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
-    public InspecaoResponseDTO atualizarStatus(Long id, InspecaoStatusDTO dto) {
+    public InspecaoResponseDTO atualizarStatus(UUID id, InspecaoStatusDTO dto) {
         Inspecao inspecao = inspecaoRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Inspeção não encontrada com o ID: " + id));
+                .orElseThrow(() -> new RuntimeException("Inspeção não encontrada com ID: " + id));
 
-        inspecao.setStatus(dto.getStatus());
+        String novoStatus = dto.getStatus() != null ? dto.getStatus().toString() : "PENDENTE";
+        
+        inspecao.setStatus(novoStatus);
+        inspecao.setObservacoesRevisao(dto.getObservacoes());
 
-        if (dto.getObservacoes() != null && !dto.getObservacoes().isBlank()) {
-            inspecao.setObservacoes(dto.getObservacoes());
+        if ("CONCLUIDA".equalsIgnoreCase(novoStatus)) {
+            inspecao.setDataConclusao(LocalDateTime.now());
+        } else if ("EM_ANDAMENTO".equalsIgnoreCase(novoStatus) && inspecao.getDataInicio() == null) {
+            inspecao.setDataInicio(LocalDateTime.now());
         }
 
-        if (StatusInspecao.CONCLUIDA.equals(dto.getStatus())) {
-            inspecao.setDataRealizacao(LocalDateTime.now(ZoneId.of("America/Sao_Paulo")));
-        }
-
-        return new InspecaoResponseDTO(inspecaoRepository.save(inspecao));
+        Inspecao salva = inspecaoRepository.save(inspecao);
+        return new InspecaoResponseDTO(salva);
     }
 }
