@@ -6,45 +6,47 @@ import br.com.fieldops.api.domain.repository.ClienteRepository;
 import br.com.fieldops.api.domain.repository.LocalRepository;
 import br.com.fieldops.api.presentation.dto.LocalRequestDTO;
 import br.com.fieldops.api.presentation.dto.LocalResponseDTO;
-import jakarta.persistence.EntityNotFoundException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class LocalService {
 
-    @Autowired
-    private LocalRepository localRepository;
+    private final LocalRepository localRepository;
+    private final ClienteRepository clienteRepository;
 
-    @Autowired
-    private ClienteRepository clienteRepository;
+    public LocalService(LocalRepository localRepository, ClienteRepository clienteRepository) {
+        this.localRepository = localRepository;
+        this.clienteRepository = clienteRepository;
+    }
 
     @Transactional
     public LocalResponseDTO criar(LocalRequestDTO dto) {
         Cliente cliente = clienteRepository.findById(dto.getClienteId())
-                .orElseThrow(() -> new EntityNotFoundException("Cliente não encontrado com ID: " + dto.getClienteId()));
+                .orElseThrow(() -> new RuntimeException("Cliente não encontrado"));
 
         Local local = new Local();
         local.setNome(dto.getNome());
         local.setEndereco(dto.getEndereco());
         local.setCliente(cliente);
-        local.setAtivo(true);
 
-        return new LocalResponseDTO(localRepository.save(local));
+        Local salvo = localRepository.save(local);
+        return new LocalResponseDTO(salvo);
     }
 
     public List<LocalResponseDTO> listarTodos() {
-        return localRepository.findByAtivoTrue().stream()
+        return localRepository.findAll().stream()
                 .map(LocalResponseDTO::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<LocalResponseDTO> listarPorCliente(Long clienteId) {
-        return localRepository.findByClienteIdAndAtivoTrue(clienteId).stream()
+        return localRepository.findAll().stream()
+                .filter(l -> l.getCliente() != null && l.getCliente().getId().equals(clienteId))
                 .map(LocalResponseDTO::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
